--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
   "short_name": "Starter Kit",
-  "name": "Dapp University Starter Kit",
+  "name": "mTC Starter Kit",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "boxicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
